--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"ip":"Jojolandtu.aternos.me",
-	"port": "37752",
-	"name": "bot1234vanev",
+	"ip":"regsurv.aternos.me",
+	"port": "25555",
+	"name": "rehanwangsaff",
 	"auto-night-skip":"false",
 	"login-enabled":"false",
 	"register-cmd":"/register pass123 ",
